--- a/ad.html
+++ b/ad.html
@@ -4,8 +4,8 @@
 
 <head>
 
-  <!-- <meta charset="utf-8"> -->
-  <title>Будьте осторожны</title>
+  <meta charset="utf-8">
+  <title>Р…СѓРґСЊС‚Рµ РѕСЃС‚РѕСЂРѕР¶РЅС‹</title>
   <style>
   body{
 	background: #380000;
