--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<!--<meta charset="UTF-8"> -->
-	<title>Лабораторная работа №2</title>
+	<meta charset="UTF-8">
+	<title>Р›Р°Р±РѕСЂР°С‚РѕСЂРЅР°СЏ СЂР°Р±РѕС‚Р° в„–2</title>
 	<link rel="stylesheet" href="style.css">
 	<style>
 	.textp {
@@ -12,31 +12,31 @@
 </head>
 <body>
 	<div class="header">
-		<h2 id="hd">Лабораторная работа №2. Каскадные таблицы стилей</h2>
+		<h2 id="hd">Р›Р°Р±РѕСЂР°С‚РѕСЂРЅР°СЏ СЂР°Р±РѕС‚Р° в„–2. РљР°СЃРєР°РґРЅС‹Рµ С‚Р°Р±Р»РёС†С‹ СЃС‚РёР»РµР№</h2>
 	</div>
 	<div class="topline">
-		<p>Присоединяйтесь к нашему Telegram-каналу!</p>
-		<a href="ad.html"> Нажмите чтобы перейти!!!</a>
+		<p>РџСЂРёСЃРѕРµРґРёРЅСЏР№С‚РµСЃСЊ Рє РЅР°С€РµРјСѓ Telegram-РєР°РЅР°Р»Сѓ!</p>
+		<a href="ad.html"> РќР°Р¶РјРёС‚Рµ С‡С‚РѕР±С‹ РїРµСЂРµР№С‚Рё!!!</a>
 		</ul>
 	</div>
 	<div class="block">
 	<div class="leftside">
 	<div class="form">
-		<p align="justify">Хотите связаться с нами? Для этого заполните поля ниже и мы Вам перезвоним! </p>
+		<p align="justify">РҐРѕС‚РёС‚Рµ СЃРІСЏР·Р°С‚СЊСЃСЏ СЃ РЅР°РјРё? Р”Р»СЏ СЌС‚РѕРіРѕ Р·Р°РїРѕР»РЅРёС‚Рµ РїРѕР»СЏ РЅРёР¶Рµ Рё РјС‹ Р’Р°Рј РїРµСЂРµР·РІРѕРЅРёРј! </p>
         <form action="">
             <div>
-				<label for="name">Введите Имя:</label>
-                <input type="text" for="name" placeholder="Имя" name="name" required>
+				<label for="name">Р’РІРµРґРёС‚Рµ РРјСЏ:</label>
+                <input type="text" for="name" placeholder="РРјСЏ" name="name" required>
             </div>
             <br>
             <div>
-				<label for="surname">Введите Фамилию:</label>
-                <input type="text" for="surname" placeholder="Фамилия" name="surname" required>
+				<label for="surname">Р’РІРµРґРёС‚Рµ Р¤Р°РјРёР»РёСЋ:</label>
+                <input type="text" for="surname" placeholder="Р¤Р°РјРёР»РёСЏ" name="surname" required>
             </div>
             <br>
             <div>
-				<label for="phone">Введите Телефон:</label>
-				<input type="tel" placeholder="Телефон" for="phone" name="phone" pattern="[\+]\d{3}\d{2}\d{3}\d{2}\d{2}" minlength="13" maxlength="13" required>
+				<label for="phone">Р’РІРµРґРёС‚Рµ РўРµР»РµС„РѕРЅ:</label>
+				<input type="tel" placeholder="РўРµР»РµС„РѕРЅ" for="phone" name="phone" pattern="[\+]\d{3}\d{2}\d{3}\d{2}\d{2}" minlength="13" maxlength="13" required>
             </div>
             <br>
             <div class="center">
@@ -48,16 +48,16 @@
 	</div>
 	<div class="centerside">
 	<div class="textp">
-	<p>Значимость этих проблем настолько очевидна, что сложившаяся структура организации создаёт предпосылки качественно новых шагов для дальнейших направлений развития проекта.</p>
-	<p>Практический опыт показывает, что реализация намеченного плана развития позволяет выполнить важнейшие задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт сложившаяся структура организации способствует подготовке и реализации новых предложений!</p>
-	<p>Практический опыт показывает, что постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки экономической целесообразности принимаемых решений. Значимость этих проблем настолько очевидна, что консультация с профессионалами из IT представляет собой интересный эксперимент проверки ключевых компонентов планируемого обновления?</p>
-	<p>Дорогие друзья, выбранный нами инновационный путь играет важную роль в формировании...</p>
+	<p>Р—РЅР°С‡РёРјРѕСЃС‚СЊ СЌС‚РёС… РїСЂРѕР±Р»РµРј РЅР°СЃС‚РѕР»СЊРєРѕ РѕС‡РµРІРёРґРЅР°, С‡С‚Рѕ СЃР»РѕР¶РёРІС€Р°СЏСЃСЏ СЃС‚СЂСѓРєС‚СѓСЂР° РѕСЂРіР°РЅРёР·Р°С†РёРё СЃРѕР·РґР°С‘С‚ РїСЂРµРґРїРѕСЃС‹Р»РєРё РєР°С‡РµСЃС‚РІРµРЅРЅРѕ РЅРѕРІС‹С… С€Р°РіРѕРІ РґР»СЏ РґР°Р»СЊРЅРµР№С€РёС… РЅР°РїСЂР°РІР»РµРЅРёР№ СЂР°Р·РІРёС‚РёСЏ РїСЂРѕРµРєС‚Р°.</p>
+	<p>РџСЂР°РєС‚РёС‡РµСЃРєРёР№ РѕРїС‹С‚ РїРѕРєР°Р·С‹РІР°РµС‚, С‡С‚Рѕ СЂРµР°Р»РёР·Р°С†РёСЏ РЅР°РјРµС‡РµРЅРЅРѕРіРѕ РїР»Р°РЅР° СЂР°Р·РІРёС‚РёСЏ РїРѕР·РІРѕР»СЏРµС‚ РІС‹РїРѕР»РЅРёС‚СЊ РІР°Р¶РЅРµР№С€РёРµ Р·Р°РґР°РЅРёСЏ РїРѕ СЂР°Р·СЂР°Р±РѕС‚РєРµ РЅР°РїСЂР°РІР»РµРЅРёР№ РїСЂРѕРіСЂРµСЃСЃРёРІРЅРѕРіРѕ СЂР°Р·РІРёС‚РёСЏ. Р Р°Р·РЅРѕРѕР±СЂР°Р·РЅС‹Р№ Рё Р±РѕРіР°С‚С‹Р№ РѕРїС‹С‚ СЃР»РѕР¶РёРІС€Р°СЏСЃСЏ СЃС‚СЂСѓРєС‚СѓСЂР° РѕСЂРіР°РЅРёР·Р°С†РёРё СЃРїРѕСЃРѕР±СЃС‚РІСѓРµС‚ РїРѕРґРіРѕС‚РѕРІРєРµ Рё СЂРµР°Р»РёР·Р°С†РёРё РЅРѕРІС‹С… РїСЂРµРґР»РѕР¶РµРЅРёР№!</p>
+	<p>РџСЂР°РєС‚РёС‡РµСЃРєРёР№ РѕРїС‹С‚ РїРѕРєР°Р·С‹РІР°РµС‚, С‡С‚Рѕ РїРѕСЃС‚РѕСЏРЅРЅС‹Р№ РєРѕР»РёС‡РµСЃС‚РІРµРЅРЅС‹Р№ СЂРѕСЃС‚ Рё СЃС„РµСЂР° РЅР°С€РµР№ Р°РєС‚РёРІРЅРѕСЃС‚Рё РїСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ РёРЅС‚РµСЂРµСЃРЅС‹Р№ СЌРєСЃРїРµСЂРёРјРµРЅС‚ РїСЂРѕРІРµСЂРєРё СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕР№ С†РµР»РµСЃРѕРѕР±СЂР°Р·РЅРѕСЃС‚Рё РїСЂРёРЅРёРјР°РµРјС‹С… СЂРµС€РµРЅРёР№. Р—РЅР°С‡РёРјРѕСЃС‚СЊ СЌС‚РёС… РїСЂРѕР±Р»РµРј РЅР°СЃС‚РѕР»СЊРєРѕ РѕС‡РµРІРёРґРЅР°, С‡С‚Рѕ РєРѕРЅСЃСѓР»СЊС‚Р°С†РёСЏ СЃ РїСЂРѕС„РµСЃСЃРёРѕРЅР°Р»Р°РјРё РёР· IT РїСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ РёРЅС‚РµСЂРµСЃРЅС‹Р№ СЌРєСЃРїРµСЂРёРјРµРЅС‚ РїСЂРѕРІРµСЂРєРё РєР»СЋС‡РµРІС‹С… РєРѕРјРїРѕРЅРµРЅС‚РѕРІ РїР»Р°РЅРёСЂСѓРµРјРѕРіРѕ РѕР±РЅРѕРІР»РµРЅРёСЏ?</p>
+	<p>Р”РѕСЂРѕРіРёРµ РґСЂСѓР·СЊСЏ, РІС‹Р±СЂР°РЅРЅС‹Р№ РЅР°РјРё РёРЅРЅРѕРІР°С†РёРѕРЅРЅС‹Р№ РїСѓС‚СЊ РёРіСЂР°РµС‚ РІР°Р¶РЅСѓСЋ СЂРѕР»СЊ РІ С„РѕСЂРјРёСЂРѕРІР°РЅРёРё...</p>
 	</div>
 	</div>
 	<div class="rightside">
 		<div class="adtext">
-			<a href="ad.html"><p align="center">ЗДЕСЬ МОГЛА БЫ БЫТЬ</p>
-			<p align="center" style="width:200px;">ВАША РЕКЛАМА</p></a>
+			<a href="ad.html"><p align="center">Р—Р”Р•РЎР¬ РњРћР“Р›Рђ Р‘Р« Р‘Р«РўР¬</p>
+			<p align="center" style="width:200px;">Р’РђРЁРђ Р Р•РљР›РђРњРђ</p></a>
 		</div>
 	</div>
     </div>
